--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -56,12 +56,12 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome @Session["UserFullName"] <b class="caret"></b></a>
                                         <ul class="dropdown-menu pull-right">
-                                            @if (Convert.ToInt32(Session["UserType"]) == 2)
+                                            @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                             {
                                                 <li><a href =" @Url.Action("PatientProfile", "Patients")"><i class="icon-user"></i>My Profile</a></li>
                                                 <li><a href="../admin/changepassword.aspx"><i class="icon-key"></i>Change Password</a></li>
                                             }
-                                            else if (Convert.ToInt32(Session["UserType"]) == 1)
+                                            else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                             {
                                                 <li><a href="../../app/Profile/doctorprofile.aspx"><i class="icon-user"></i>My Profile</a></li>
                                                 <li><a href="/User/Changepassword"><i class="icon-key"></i>Change Password</a></li>
@@ -111,7 +111,7 @@
                                 <div class="span12 center_align">
                                     <div class="span8 text-center custom-border-around hidden-phone hidden-tablet reg-menu" style="margin-left:0px;margin-bottom:.5%">
                                         <ul class="nav" id="global-actions">
-                                            @if (Convert.ToInt32(Session["UserType"]) == 2)
+                                            @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                             {
                                                 <li id="liaskdoc" class="ask-doctor">
                                                     <a href="../patient/askdoctor.aspx">
@@ -134,7 +134,7 @@
                                                     </a>
                                                 </li>
                                             }
-                                            else if (Convert.ToInt32(Session["UserType"]) == 1)
+                                            else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                             {
                                                 <li id="liDocFeed">
                                                     <a href="../Feed/doctorfeed.aspx">
@@ -149,7 +149,7 @@
                                                     </a>
                                                 </li>
                                             }
-                                            else if (Convert.ToInt32(Session["UserType"]) == 0)
+                                            else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
                                             {
                                                 <li id="liAdminQuestions">
                                                     <a href="../../app/admin/QuestionList.aspx">
@@ -192,7 +192,7 @@
                             </div>
                         </div>
                         <div class="span8 collapse nav-collapse visible-phone visible-tablet" style="padding-top:3%;">
-                            @if (Convert.ToInt32(Session["UserType"]) ==2)
+                            @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li class="ask-doctor">
@@ -223,7 +223,7 @@
                                     </li>
                                 </ul>
                             }
-                            else if (Convert.ToInt32(Session["UserType"]) ==1)
+                            else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li>
@@ -242,7 +242,7 @@
                                     </li>
                                 </ul>
                             }
-                            else if (Convert.ToInt32(Session["UserType"]) == 0)
+                            else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li>
