--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -87,10 +87,10 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">New to Mirai Consult&#8482;? Signup here<b class="caret"></b></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="../SignUp/PatientSignUp.aspx"><i class="icon-user"></i>Signup as Patient</a></li>
+                                            <li><a href="@Url.Action("PatientSignUp", "User")"><i class="icon-user"></i>Signup as Patient</a></li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a href="../SignUp/DoctorSignUp.aspx">
+                                                <a href="@Url.Action("DoctorSignUp","User")">
                                                     <i class="icon-user-md"></i>Signup as Doctor
                                                 </a>
                                             </li>
