--- a/MiraiConsultMVC/Views/Shared/Error.cshtml
+++ b/MiraiConsultMVC/Views/Shared/Error.cshtml
@@ -1,10 +1,79 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
-@{
-    ViewBag.Title = "Error";
+<div class="row-fluid">
+    <div class="span12 main-outter-padding">
+        <div class="row-fluid">
+            <div id="controlcontainer" class="wrapper-bordered " visible="true" runat="server">
+                <div class="row-fluid">
+                    <div class="span12">
+                       @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "true")
+                    {
+                        <div id="message" class="alert alert-success">
+                            <label id="lblError">@ViewBag.Msg</label>
+                        </div>
+                    }
+                    @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "false") {
+                        <div id="message" class="alert alert-error">
+                              <label id="lblError">@ViewBag.Msg</label>
+                               </div>
+                    }
+                    </div>
+                </div>
+@using (Html.BeginForm("Error", "Home", FormMethod.Post, null))
+{
+    if (@Model != null)
+    {
+        TempData["Exception"] = @Model.Exception;
+    }
+            <div class="row-fluid">
+                    <div class="span12">
+                        <div class="control-group" style="width:95%;">
+                                <p class="custom_p" id="appExceptionMsg"
+                                   align="left" runat="server">
+                                    Sorry, we have encountered an application error! We apologise for the inconvenience.
+                                    <br />
+                                    Please leave your login ID and take a moment to describe the circumstances under
+                                    which this error occurred.
+                                    <br />
+                                    This report will be sent to the Mirai Consult&#8482; team which will help them to troubleshoot
+                                    and resolve this issue.
+                                </p>
+                                @Html.TextArea("name", "", new { @class = "custom_textarea", rows="2" ,cols="20"  })
+                        </div>
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="span12">
+                        <input class="btn thanx gray-border" id="btnSend" type="submit" value="Send" />
+                        <a class="btn cancel gray-border" id="btnCancel" href="/" >Cancel</a>
+                    </div>
+                </div>
 }
+            </div>
+        </div>
+    </div>
+</div>
+<script language="javascript" type="text/javascript">
+    function validationData() {
+        var value = $('#ErrorDes').val();
+        if ($('#ErrorDes').val() == "") {
+            $('#message').show();
+            document.getElementById("lblMessage").className = "alert alert-error";
+            document.getElementById("lblMessage").innerHTML = "Please enter description";
+            return false;
+        }
+        else {
+            return true;
+        }
+    }
 
-<hgroup class="title">
-    <h1 class="error">Error.</h1>
-    <h2 class="error">An error occurred while processing your request.</h2>
-</hgroup>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-48132984-2', 'askmirai.com');
+    ga('send', 'pageview');
+</script>
