Find doctor page model ,view ,controller is completed

--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -129,7 +129,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liFindDoc" class="find-doctors">
-                                                    <a href="../patient/finddoctor.aspx">
+                                                    <a href="@Url.Action("FindDoctors", "FindDoctor")">
                                                         <span class="Icon Icon--find-doctor Icon--large"></span><span class="text"><br />Find a Doctor</span>
                                                     </a>
                                                 </li>
