Deleted CustomContext.cs and SqlHelper.cs file.

--- a/MiraiConsultMVC/Views/Shared/_AutoCompleteSearch.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AutoCompleteSearch.cshtml
@@ -1,6 +1,4 @@
-﻿<form autocomplete="on">    
-    <input id="txtsearch" type="search" name="txtsearch" class="form-control pull-right form-search search-float input-searchsize search-query " placeholder="Search" onkeypress="return isEnterPress(event, this);" />
-</form>
+﻿    <input id="txtsearch" type="search" name="txtsearch" class="form-control pull-right form-search search-float input-searchsize search-query " placeholder="Search" onkeypress="return isEnterPress(event, this);" />
     <script type="text/javascript">
         var currentLocation = window.location;
         var strUrl = null;
