--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -152,7 +152,7 @@
                                             else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
                                             {
                                                 <li id="liAdminQuestions">
-                                                    <a href="../../app/admin/QuestionList.aspx">
+                                                    <a href="/admin/QuestionList">
                                                         <span class="Icon Icon--questions Icon--large"></span><span class="text"><br />Questions</span>
                                                     </a>
                                                 </li>
