--- a/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
@@ -144,7 +144,7 @@
                     document.getElementById('msglabel').className = 'alert alert-success';
                     document.getElementById('btnAskMirai').style.display = 'none';
                     document.getElementById('txtAreaQuestion').style.display = 'none'; 
-                    document.getElementById('searchResultSpan').InnerHtml = '';
+                    document.getElementById('searchResultSpan').innerHTML = '';
                     document.getElementById('ansCount').style.display = 'none';
                 }
             },
